  * ps: restore lost tasks for options --sort with -H      issue #304
  * ps: add 'docker' containers field, similar to 'lxc'
  * ps: Restore AIX free-format                            issue #323
  * ps: can display open file descriptors for each task
  * ps: Fix signames scanning                              issue #341
  * ps: Add -o pcap,pcaps to show permitted capabilities
  * slabtop: Add --human option for slab size
  * sysctl: Add glob excludes                              merge #206
  * sysctl: --all skips stat_refresh                       Debian #978688
  * top: added a 'CLS' scheduling class field, like ps
  * top: exploit library addition of 'disk sleep'          issue #265
  * top: add 'docker' containers field, similar to 'lxc'
  * top: provides additional control over colors
  * top: can display open file descriptors for each task
  * top: corrected cpu % for hosts with qemu processes     issue #339
  * top: remains functional if /proc mounted subset=pid
  * top: can display a task's permitted capabilities (^A)
  * uptime: Add container uptime option                    issue #300
  * vmstat: Add page allocation to --stats
  * vmstat.8: si/so are changed by --unit                  Debian #1061944
  * w: Don't segfault with -s option                       issue #301
  * w: Cache pids list                                     issue #305
  * w: Add container uptime option
  * watch: use clock_gettime                               issue #295
  * watch.1: --chgexit only works for visible changes      Debian #729569
  * hugetop: a new utility to show huge page information   merge #214

procps-ng-4.0.4
---------------
  * library (API & ABI unchanged)
    increment revision: 0:2:0
    tolerates all potential 'cpuinfo' formats              issue #272
    restore the proper main thread tics valuations         issue #280
    Remove myself from proc count                          merge #193
    Refactor the escape code                               Debian #1035649