@@ -4,3 +4,4 @@ site.bak
 site.exp
 test-schedbatch
 test-hugetlb
+test-zombie
